jss-compiler/tests/parser/invalid/class_member_order_error.jss
class Ponto {
    Ponto constructor(int x, int y) {
        this.x = x;
        this.y = y;
    }
    int x;
    int y;
}
